<resources>
    <string name="app_name">AndroidPN Client</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear All</string>
    <string name="pref_notify_settings">Notification Settings</string>
    <string name="pref_host">Host Settings</string>
    <string name="sound">Sound</string>
    <string name="pref_sound">Play a sound for notifications</string>
    <string name="notify">Notifications Enabled</string>
    <string name="pref_notify">Receive push messages</string>
    <string name="vibrate">Vibrate</string>
    <string name="pref_vibrate">Vibrate the phone for notifications</string>
    <string name="apikey">API Key</string>
    <string name="pref_apikey">Your servers API key</string>
    <string name="xmpphost">XMPP Host</string>
    <string name="pref_xmpphost">Your servers name or IP</string>
    <string name="xmppport">XMPP Port</string>
    <string name="pref_xmppport">Port</string>
    <string name="toast">Toast</string>
    <string name="pref_toast">Popup Notification</string>
    <string name="pref_auto">Run the service on boot</string>
    <string name="auto">Auto Start</string>
    <string name="dttm">Show Date and Time</string>
    <string name="pref_dttm">Display date and time for each notification</string>
    <string name="pref_dttmfrmt">%d/%m/%Y %H:%M</string>
    <string name="dttmfrmt">Date Format</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="rationale_phone_state">Phone state required for listening for notification.</string>
    <string name="user">Username</string>
    <string name="user_pref">Leave blank for default</string>
    <string name="password">Password</string>
    <string name="pass_pref">Leave blank for default</string>
    <string name="email">Email</string>
    <string name="email_pref">Optional email address</string>
    <string name="login_set">Login Settings</string>
    <string name="name">Name</string>
    <string name="name_pref">Optional display name</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
</resources>
